syntax = "proto3";

import "types/account.proto";

package account;

service AccountService {
    rpc GetSelfInfo (GetSelfInfoRequest) returns (GetSelfInfoResponse);
}

message GetSelfInfoRequest {}

message GetSelfInfoResponse {
    Account account = 1;
}
